--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AttendanceTracker">
         <activity
-            android:name=".LoginActivity"
+            android:name=".CreateAccountActivity"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.AttendanceTracker"/>
@@ -23,15 +23,13 @@
             android:theme="@style/Theme.AttendanceTracker"/>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".DashboardActivity"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AttendanceTracker"/>
 
-
-
         <activity
-        android:name=".CreateAccountActivity"
+        android:name=".LoginActivity"
         android:exported="true"
         android:label="@string/app_name"
         android:theme="@style/Theme.AttendanceTracker">
