--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,12 @@
             android:theme="@style/Theme.AttendanceTracker"/>
 
         <activity
+            android:name=".AttendanceReportActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AttendanceTracker"/>
+
+        <activity
         android:name=".LoginActivity"
         android:exported="true"
         android:label="@string/app_name"
