--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,42 +12,54 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AttendanceTracker">
         <activity
-            android:name=".CreateAccountActivity"
+            android:name=".activity.CreateAccountActivity"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.AttendanceTracker"/>
         <activity
-            android:name=".AttendanceActivity"
+            android:name=".activity.AttendanceActivity"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AttendanceTracker"/>
 
         <activity
-            android:name=".DashboardActivity"
+            android:name=".activity.DashboardActivity"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AttendanceTracker"/>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activity.SettingsActivity"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AttendanceTracker"/>
 
         <activity
-            android:name=".ForgotPasswordActivity"
+            android:name=".activity.ForgotPasswordActivity"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AttendanceTracker"/>
 
         <activity
-            android:name=".AttendanceReportActivity"
+            android:name=".activity.AttendanceReportActivity"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.AttendanceTracker"/>
 
         <activity
-        android:name=".LoginActivity"
+            android:name=".activity.ChangePasswordActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AttendanceTracker"/>
+
+        <activity
+            android:name=".activity.ChangePasswordExActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AttendanceTracker"/>
+
+        <activity
+        android:name=".activity.LoginActivity"
         android:exported="true"
         android:label="@string/app_name"
         android:theme="@style/Theme.AttendanceTracker">
